--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -66,7 +66,7 @@
   }
 
   #IntContainer {
-    display: none;
+    display: flex;
     width: 130px;
     height: auto;
     background-color: white;
