--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -69,7 +69,7 @@
     width: 130px;
     height: auto;
     background-color: white;
-    position: relative;
+    position: absolute;
   }
 
   .IntBox {
@@ -78,6 +78,7 @@
     height: calc(inherit - 1px);
     flex-direction: column;
     background-color: gray;
+    position: absolute;
   }
 
   .clickBox {
