--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -66,6 +66,7 @@
   }
 
   #IntContainer {
+    display: flex;
     width: 130px;
     height: auto;
     background-color: white;
@@ -78,7 +79,6 @@
     height: 99%;
     flex-direction: column;
     background-color: gray;
-    position: relative;
   }
 
   .clickBox {
